--- a/index.html
+++ b/index.html
@@ -1,102 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hussein Hany's Profile</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hussein Hany - Portfolio</title>
+    <!-- Bootstrap CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            color: #343a40;
+        }
 
-    h1 {
-      color: #333;
-    }
+        header {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 20px;
+            text-align: center;
+        }
 
-    h2 {
-      color: #555;
-    }
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-    p {
-      color: #777;
-    }
+        h2 {
+            color: #007bff;
+        }
 
-    a {
-      color: #3498db;
-      text-decoration: none;
-    }
-  </style>
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Hussein Hany</h1>
-    <p>Cairo, Egypt</p>
-    <p>(+20) 1017620338</p>
-    <p>Email: hussein.hany.cs@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/3ein39/">linkedin.com/in/3ein39</a></p>
-    <p>GitHub: <a href="https://github.com/3ein39">github.com/3ein39</a></p>
-  </header>
-
-  <section>
+<header class="bg-dark text-white">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1>Hussein Hany</h1>
+                <h2 class="h4">Passionate Software Developer</h3>
+            </div>
+            <div class="col-md-6">
+                <p>Cairo, Egypt</p>
+                <p>(+20) 1017620338</p>
+                <p>Email: <a href="mailto:hussein.hany.cs@gmail.com">hussein.hany.cs@gmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/3ein39/" target="_blank">linkedin.com/in/3ein39</a></p>
+                <p>GitHub: <a href="https://github.com/3ein39" target="_blank">github.com/3ein39</a></p>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="container mt-4">
     <h2>Education</h2>
-    <p>University: University of Fayoum</p>
-    <p>Major: B.S. in Computer Science</p>
-    <p>CGPA: 3.5</p>
-    <p>Undergraduate Coursework:
-      Operating Systems, Database Management Systems, Algorithms, Programming Languages, Computer Architecture, Object Oriented Programming, Data Structures.
-    </p>
+    <p>University of Fayoum</p>
+    <p>B.S. in Computer Science (Fall 2021 – May 2025)</p>
+    <ul>
+        <li>CGPA: 3.5</li>
+        <li>Undergraduate Coursework:
+            Operating Systems, Database Management Systems, Algorithms, Programming Languages, Computer Architecture, Object Oriented Programming, Data Structures.
+        </li>
+    </ul>
 
     <p>Information Technology Institute (Remote)</p>
     <p>Aug 2023 – Sep 2023</p>
     <p>Embraced open-source practices, contributing to problem-solving exercises and hands-on learning.</p>
-  </section>
+</section>
 
-  <section>
+<section class="container mt-4">
     <h2>Experience</h2>
     <p>ICPC Fayoum University</p>
     <p>Nov 2022 – Sep 2023</p>
     <ul>
-      <li>Provided guidance and support to team members in preparing for contests, refining their problem-solving skills, and implementing efficient algorithms and data structures.</li>
-      <li>Collaborated with fellow mentors and team leaders to develop comprehensive training programs, ensuring that mentees received a well-rounded education in algorithms, data structures, and competitive programming methodologies.</li>
-      <li>Assisted in organizing programming workshops, training sessions, and coding competitions to enhance the programming abilities of community members.</li>
+        <li>Provided guidance and support to team members in preparing for contests, refining their problem-solving skills, and implementing efficient algorithms and data structures.</li>
+        <li>Collaborated with fellow mentors and team leaders to develop comprehensive training programs, ensuring that mentees received a well-rounded education in algorithms, data structures, and competitive programming methodologies.</li>
+        <li>Assisted in organizing programming workshops, training sessions, and coding competitions to enhance the programming abilities of community members.</li>
     </ul>
-  </section>
+</section>
 
-  <section>
+<section class="container mt-4">
     <h2>Technical Experience</h2>
     <h3>Projects</h3>
     <ul>
-      <li>Knight’s Travails (2023): Implemented a solution for the Knight’s Travails problem, finding the shortest path for a knight on a chessboard. JavaScript, HTML, CSS.</li>
-      <li>Binary Search Tree Visualizer (2023): Designed and implemented a user-friendly web-based UI for creating, manipulating, and visualizing Binary Search Trees, featuring node insertion/deletion, multiple traversal methods, pretty print functionality. JavaScript</li>
-      <li>Tic Tac Toe (2023): Developed a game with an AI opponent using the Minimax algorithm, providing challenging and strategic gameplay. JavaScript</li>
-      <li>YelpCamp (2022): Developed a Node.js web app for campground reviews, featuring user authentication, authorization, campground management, map display. NodeJS, MongoDB, ExpressJS, PassportJS</li>
+        <li><strong>Knight’s Travails (2023):</strong> Implemented a solution for the Knight’s Travails problem, finding the shortest path for a knight on a chessboard. JavaScript, HTML, CSS.</li>
+        <li><strong>Binary Search Tree Visualizer (2023):</strong> Designed and implemented a user-friendly web-based UI for creating, manipulating, and visualizing Binary Search Trees, featuring node insertion/deletion, multiple traversal methods, pretty print functionality. JavaScript</li>
+        <li><strong>Tic Tac Toe (2023):</strong> Developed a game with an AI opponent using the Minimax algorithm, providing challenging and strategic gameplay. JavaScript</li>
+        <li><strong>YelpCamp (2022):</strong> Developed a Node.js web app for campground reviews, featuring user authentication, authorization, campground management, map display. NodeJS, MongoDB, ExpressJS, PassportJS</li>
     </ul>
-  </section>
+</section>
 
-  <section>
+<section class="container mt-4">
     <h2>Additional Experience and Awards</h2>
     <p>Competitive Programming</p>
     <p>Egyptian Programming Contest</p>
     <p>Aug 2022 – Aug 2023</p>
     <ul>
-      <li>Ranked 28th at 2023 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
-      <li>Ranked 21st at 2022 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
+        <li>Ranked 28th at 2023 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
+        <li>Ranked 21st at 2022 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
     </ul>
 
     <p>Top Achiever</p>
     <p>Programming 2 CS142</p>
     <p>Jun 2022</p>
     <p>Achieved 1st place in course project (out of 60 teams), developed a GUI program that addresses academic challenges in math and physics while providing time management support.</p>
-  </section>
+</section>
 
-  <section>
+<section class="container mt-4">
     <h2>Languages and Technologies</h2>
     <ul>
-      <li>Node.js, JavaScript, Express.js.</li>
-      <li>MongoDB, SQL, NoSQL.</li>
-      <li>Git, JetBrains IDEs.</li>
+        <li>Node.js, JavaScript, Express.js.</li>
+        <li>MongoDB, SQL, NoSQL.</li>
+        <li>Git, JetBrains IDEs.</li>
     </ul>
-  </section>
+</section>
+
+<!-- Bootstrap JS script link -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
