--- a/index.html
+++ b/index.html
@@ -4,63 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hussein Hany - Portfolio</title>
-    <!-- Bootstrap CSS link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-            color: #343a40;
-        }
-
-        header {
-            background-color: #343a40;
-            color: #ffffff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #007bff;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        ul li {
-            margin-bottom: 10px;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <!-- Add Tailwind CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-<header class="bg-dark text-white">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h1>Hussein Hany</h1>
-                <h2 class="h4">Passionate Software Developer</h3>
+<body class="bg-gray-800 text-white m-4">
+<header class="bg-gray-900 text-white">
+    <div class="container mx-auto py-4 p-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div>
+                <h1 class="text-2xl font-bold">Hussein Hany</h1>
+                <h2 class="text-sm">Passionate Software Developer</h2>
             </div>
-            <div class="col-md-6">
+            <div class="text-right">
                 <p>Cairo, Egypt</p>
                 <p>(+20) 1017620338</p>
                 <p>Email: <a href="mailto:hussein.hany.cs@gmail.com">hussein.hany.cs@gmail.com</a></p>
@@ -70,70 +25,92 @@
         </div>
     </div>
 </header>
-<section class="container mt-4">
-    <h2>Education</h2>
-    <p>University of Fayoum</p>
-    <p>B.S. in Computer Science (Fall 2021 – May 2025)</p>
-    <ul>
-        <li>CGPA: 3.5</li>
-        <li>Undergraduate Coursework:
-            Operating Systems, Database Management Systems, Algorithms, Programming Languages, Computer Architecture, Object Oriented Programming, Data Structures.
-        </li>
-    </ul>
+<section class="container mx-auto my-4 bg-gray-900 p-6 rounded shadow-md">
+    <div>
+        <h2 class="text-2xl font-bold mb-4">Education</h2>
+        <div class="mb-4">
+            <p class="font-bold">University of Fayoum</p>
+            <p>B.S. in Computer Science (Fall 2021 – May 2025)</p>
+            <ul>
+                <li>CGPA: 3.5</li>
+                <li>Undergraduate Coursework:
+                    Operating Systems, Database Management Systems, Algorithms, Programming Languages, Computer Architecture, Object Oriented Programming, Data Structures.
+                </li>
+            </ul>
+        </div>
 
-    <p>Information Technology Institute (Remote)</p>
-    <p>Aug 2023 – Sep 2023</p>
-    <p>Embraced open-source practices, contributing to problem-solving exercises and hands-on learning.</p>
+        <div>
+            <p class="font-bold">Information Technology Institute (Remote)</p>
+            <p>Aug 2023 – Sep 2023</p>
+            <p>Embraced open-source practices, contributing to problem-solving exercises and hands-on learning.</p>
+        </div>
+    </div>
 </section>
 
-<section class="container mt-4">
-    <h2>Experience</h2>
-    <p>ICPC Fayoum University</p>
-    <p>Nov 2022 – Sep 2023</p>
-    <ul>
-        <li>Provided guidance and support to team members in preparing for contests, refining their problem-solving skills, and implementing efficient algorithms and data structures.</li>
-        <li>Collaborated with fellow mentors and team leaders to develop comprehensive training programs, ensuring that mentees received a well-rounded education in algorithms, data structures, and competitive programming methodologies.</li>
-        <li>Assisted in organizing programming workshops, training sessions, and coding competitions to enhance the programming abilities of community members.</li>
-    </ul>
+<section class="container mx-auto my-4 bg-gray-900 p-6 rounded shadow-md">
+    <div>
+        <h2 class="text-2xl font-bold mb-4">Experience</h2>
+        <div class="mb-4">
+            <p class="font-bold">ICPC Fayoum University</p>
+            <p>Nov 2022 – Sep 2023</p>
+            <ul>
+                <li>Provided guidance and support to team members in preparing for contests, refining their problem-solving skills, and implementing efficient algorithms and data structures.</li>
+                <li>Collaborated with fellow mentors and team leaders to develop comprehensive training programs, ensuring that mentees received a well-rounded education in algorithms, data structures, and competitive programming methodologies.</li>
+                <li>Assisted in organizing programming workshops, training sessions, and coding competitions to enhance the programming abilities of community members.</li>
+            </ul>
+        </div>
+    </div>
 </section>
 
-<section class="container mt-4">
-    <h2>Technical Experience</h2>
-    <h3>Projects</h3>
-    <ul>
-        <li><strong>Knight’s Travails (2023):</strong> Implemented a solution for the Knight’s Travails problem, finding the shortest path for a knight on a chessboard. JavaScript, HTML, CSS.</li>
-        <li><strong>Binary Search Tree Visualizer (2023):</strong> Designed and implemented a user-friendly web-based UI for creating, manipulating, and visualizing Binary Search Trees, featuring node insertion/deletion, multiple traversal methods, pretty print functionality. JavaScript</li>
-        <li><strong>Tic Tac Toe (2023):</strong> Developed a game with an AI opponent using the Minimax algorithm, providing challenging and strategic gameplay. JavaScript</li>
-        <li><strong>YelpCamp (2022):</strong> Developed a Node.js web app for campground reviews, featuring user authentication, authorization, campground management, map display. NodeJS, MongoDB, ExpressJS, PassportJS</li>
-    </ul>
+<section class="container mx-auto my-4 bg-gray-900 p-6 rounded shadow-md">
+    <div>
+        <h2 class="text-2xl font-bold mb-4">Technical Experience</h2>
+        <div class="mb-4">
+            <h3 class="text-xl font-bold">Projects</h3>
+            <ul>
+                <li><strong>Knight’s Travails (2023):</strong> Implemented a solution for the Knight’s Travails problem, finding the shortest path for a knight on a chessboard. JavaScript, HTML, CSS.</li>
+                <li><strong>Binary Search Tree Visualizer (2023):</strong> Designed and implemented a user-friendly web-based UI for creating, manipulating, and visualizing Binary Search Trees, featuring node insertion/deletion, multiple traversal methods, pretty print functionality. JavaScript</li>
+                <li><strong>Tic Tac Toe (2023):</strong> Developed a game with an AI opponent using the Minimax algorithm, providing challenging and strategic gameplay. JavaScript</li>
+                <li><strong>YelpCamp (2022):</strong> Developed a Node.js web app for campground reviews, featuring user authentication, authorization, campground management, map display. NodeJS, MongoDB, ExpressJS, PassportJS</li>
+            </ul>
+        </div>
+    </div>
 </section>
 
-<section class="container mt-4">
-    <h2>Additional Experience and Awards</h2>
-    <p>Competitive Programming</p>
-    <p>Egyptian Programming Contest</p>
-    <p>Aug 2022 – Aug 2023</p>
-    <ul>
-        <li>Ranked 28th at 2023 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
-        <li>Ranked 21st at 2022 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
-    </ul>
+<section class="container mx-auto my-4 bg-gray-900 p-6 rounded shadow-md">
+    <div>
+        <h2 class="text-2xl font-bold mb-4">Additional Experience and Awards</h2>
+        <div class="mb-4">
+            <p class="font-bold">Competitive Programming</p>
+            <p>Egyptian Programming Contest</p>
+            <p>Aug 2022 – Aug 2023</p>
+            <ul>
+                <li>Ranked 28th at 2023 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
+                <li>Ranked 21st at 2022 ICPC ECPC Qualifications Collegiate Programming Contest out of 280 teams</li>
+            </ul>
+        </div>
 
-    <p>Top Achiever</p>
-    <p>Programming 2 CS142</p>
-    <p>Jun 2022</p>
-    <p>Achieved 1st place in course project (out of 60 teams), developed a GUI program that addresses academic challenges in math and physics while providing time management support.</p>
+        <div>
+            <p class="font-bold">Top Achiever</p>
+            <p>Programming 2 CS142</p>
+            <p>Jun 2022</p>
+            <p>Achieved 1st place in course project (out of 60 teams), developed a GUI program that addresses academic challenges in math and physics while providing time management support.</p>
+        </div>
+    </div>
 </section>
 
-<section class="container mt-4">
-    <h2>Languages and Technologies</h2>
-    <ul>
-        <li>Node.js, JavaScript, Express.js.</li>
-        <li>MongoDB, SQL, NoSQL.</li>
-        <li>Git, JetBrains IDEs.</li>
-    </ul>
+<section class="container mx-auto my-4 bg-gray-900 p-6 rounded shadow-md">
+    <div>
+        <h2 class="text-2xl font-bold mb-4">Languages and Technologies</h2>
+        <ul>
+            <li>Node.js, JavaScript, Express.js.</li>
+            <li>MongoDB, SQL, NoSQL.</li>
+            <li>Git, JetBrains IDEs.</li>
+        </ul>
+    </div>
 </section>
 
-<!-- Bootstrap JS script link -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Add Tailwind CSS JS script link -->
+<script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
